--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @onedark_date_format "%D"
 
+set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 set -g @plugin 'tmux-plugins/tmux-sensible'
