big update (see README)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,18 @@
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:/opt/local/bin"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @onedark_date_format "%D"
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g status-position bottom
 
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",alacritty:Tc"
 
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g mouse on
-run '~/.tmux/plugins/tpm/tpm'
 set -g focus-events on
 
 bind -n M-Left select-pane -L
@@ -18,7 +22,10 @@ bind -n M-Down select-pane -D
 
 bind -n M-u attach-session -t . -c '#{pane_current_path}'
 
-set -g prefix C-a
+unbind C-b
+set-option -g prefix `
+bind ` send-prefix
+
 setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
@@ -30,3 +37,8 @@ bind l select-pane -R
 
 # copies tmux copy-buffer to clipboard
 bind y run-shell "tmux show-buffer | xclip -sel clip -i > /dev/null"
+
+# when a session ends, switch to another active session, otherwise exit
+set-option -g detach-on-destroy off
+
+run '~/.tmux/plugins/tpm/tpm'
