migrating to nix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,15 +4,17 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @onedark_date_format "%D"
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'wfxr/tmux-fzf-url'
+
 set-option -g status-position bottom
 
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
+
 # set -ga terminal-overrides ",*256col*:Tc"
-set -ga terminal-overrides ",alacritty:Tc"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+# set -ga terminal-overrides ",alacritty:Tc"
 
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-set -g mouse on
 set -g focus-events on
 
 bind -n M-Left select-pane -L
@@ -26,9 +28,8 @@ unbind C-b
 set-option -g prefix `
 bind ` send-prefix
 
-setw -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+# bind-key -T copy-mode-vi 'v' send -X begin-selection
+# bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 bind h select-pane -L
 bind j select-pane -D
@@ -36,9 +37,29 @@ bind k select-pane -U
 bind l select-pane -R
 
 # copies tmux copy-buffer to clipboard
-bind y run-shell "tmux show-buffer | xclip -sel clip -i > /dev/null"
+# bind y run-shell "tmux show-buffer | xclip -sel clip -i > /dev/null"
+# set -s copy-command 'pbcopy'
 
 # when a session ends, switch to another active session, otherwise exit
 set-option -g detach-on-destroy off
+
+# macOS only
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
+bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
+
+# To copy, left click and drag to highlight text in yellow, 
+# once you release left click yellow text will disappear and will automatically be available in clibboard
+# # Use vim keybindings in copy mode
+setw -g mode-keys vi
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
 run '~/.tmux/plugins/tpm/tpm'
