--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,12 +8,13 @@ set -g @plugin 'wfxr/tmux-fzf-url'
 
 set-option -g status-position bottom
 
-# set -g default-terminal "xterm-256color"
 set-option -g default-terminal "screen-256color"
-
-# set -ga terminal-overrides ",*256col*:Tc"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
-# set -ga terminal-overrides ",alacritty:Tc"
+
+set-option -g allow-passthrough on
+
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g focus-events on
 
